--- a/FBprophet_forecasting.html
+++ b/FBprophet_forecasting.html
@@ -60,13 +60,13 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <!--<li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>-->
           <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-		  <li><a href="index.html#facts" class="nav-link scrollto"><i class="bx bx-line-chart"></i> <span>Facts</span></a></li>
+		  <!--<li><a href="index.html#facts" class="nav-link scrollto"><i class="bx bx-line-chart"></i> <span>Facts</span></a></li>-->
 		  <li><a href="index.html#skills" class="nav-link scrollto"><i class="bi bi-boxes"></i> <span>Skills</span></a></li>
           <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-		  <li><a href="index.html#awards" class="nav-link scrollto"><i class="bi bi-award"></i> <span>Awards</span></a></li>
-          <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+		  <!--<li><a href="index.html#awards" class="nav-link scrollto"><i class="bi bi-award"></i> <span>Awards</span></a></li>-->
+          <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
           <li><a href="index.html#testimonials" class="nav-link scrollto"><i class="bi bi-chat-quote-fill"></i> <span>Testimonials</span></a></li>
           <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
 		  <li><a></a></li>
@@ -101,28 +101,28 @@
 		  <div class="col-lg-12">
 			<div class="portfolio-description section-title" style="text-align: justify;
   text-justify: inter-word;">
-				<h2>General Information</h2>
+				<!--<h2>General Information</h2>
 				<div class="portfolio-info">
 				  <p>Generally forecasting models will predict patterns or can be dependent on past data.
 						   But FbProphet allowed to train the forecasting model to train itself with past data,
 						   and predict values based on the current values of the additional regressors. 
 						   This makes this model more efficient than other prediction models which aren't
 						   capable to performing such predictions.</p><br>
-						   <h6><strong>Frameworks/Programming Languages/Concepts</strong>: Python, Django, ARIMA, FbProphet</h6>
 				</div>
-				<br/>
+				<br/>-->
 				<h2>Project Description</h2>
 					<div class="portfolio-info">
-						<p>The model is provided with data which depends on three regressors or parameters. Generally the model is 
+						<h6><strong>Frameworks/Programming Languages/Concepts</strong>: Python, Django, ARIMA, FbProphet</h6>
+						<p>Generally the model is 
 					predicting the usage of network by the users of a company, and so the parameters on which it is dependent are
-					number of current users of the company, current bandwidth usage of each user and current network capacity. The dashboard provides
+					number of current users of the company, current bandwidth usage of each user and current network capacity, therefore, the model depends on three regressors or parameters. <!--The dashboard provides
 					with forms for users to enter the current values of the parameters and on submission the model will make future predictions of 
 					next 3 months.The dashboard also provides with tables which displays the recent data of the regressors based on which
 					the prediction is being made and another table displays the predicted values for 3 months along with the upper and lower
-					confidence for predicted values.<br\></p>
+					confidence for predicted values.--><br\>The forecasting model used is FbProphet and the model is trained with past data of the target data and the data of the three regressors. </p>
 					</div>
-				<img src="assets/img/portfolio/FbProphetForecasting/AIGProjectDashboard.JPG" alt="Dashboard" width=100% height="500"/>
-					<div class="portfolio-info">
+				<!--<img src="assets/img/portfolio/FbProphetForecasting/AIGProjectDashboard.JPG" alt="Dashboard" width=100% height="500"/>-->
+					<!--<div class="portfolio-info">
 					<p>The forecasting model used is FbProphet and the model is trained with past data of the target data and the data of the
 					three regressors. After the model is trained with the data, FBProphet allows for future date creation and so the future dates, i.e.
 					of 3 months is generated for prediction. Now as mentioned earlier that FBProphet allows for updation of forecasted data based 
@@ -130,24 +130,20 @@
 					<br/>There are two methods for providing the data for the regressors, first is using the data in the excel sheet or the table from which
 					the model was trained and second being using the user interface and providing the current values of the data. In the below forecasting result
 					the excel sheet data has been used, i.e. the data for 3 months whose actual values were known so that the accuracy for prediction could be 
-					determined. And as can be seen that the mean squared error value is 10.52 which is very less and so the model is able to make close predictions.</p></div>
-					<img src="assets/img/portfolio/FbProphetForecasting/AIGProjectPredictionWithProvidedData.JPG" alt="Prediction with provided data" width=100% height="500"/>
-					<div class="portfolio-info"><p>In this case the second data entry method is used, i.e. data being provided by the user using the user interface. The number of users and the bandwidth usage is 
-					kept nearly constant but the network capacity has been reduced from 50000000 to 40000000 and so as the networ capacity is reduced
-					and so the network percentage usage will be impacted as the network capaicty is less compared to the number of users and the bandwidth requirement. As the model
-					is able to make the prediction as there is a steep surge in the percentage usage.</p></div>
+					determined. And as can be seen that the mean squared error value is 10.52 which is very less and so the model is able to make close predictions.</p></div>-->
+					<!--<img src="assets/img/portfolio/FbProphetForecasting/AIGProjectPredictionWithProvidedData.JPG" alt="Prediction with provided data" width=100% height="500"/>-->
+					<div class="portfolio-info"><p><!--In this case the second data entry method is used, i.e. data being provided by the user using the user interface.--> The number of users and the bandwidth usage is 
+					kept nearly constant but reducing the network capacity from 50000000 to 40000000, which should impact the network percentage usage. The model predicts a steep surge in the percentage usage.</p></div>
 					<img src="assets/img/portfolio/FbProphetForecasting/AIGProjectPredictionWithSameUsersButDecreaseIncapacity.JPG" alt="Prediction with user provided data but decrease in network capacity" width=100% height="500"/>
-					<div class="portfolio-info"><p>In this case the second data entry method is used, i.e. data being provided by the user using the user interface. The network capacity is considered 50000000 in this case but the number of users has been increased and the 
+					<!--<div class="portfolio-info"><p>In this case the second data entry method is used, i.e. data being provided by the user using the user interface. The network capacity is considered 50000000 in this case but the number of users has been increased and the 
 					bandwidth usage and as can be seen that the model predicted it back and when compared to the first case it can be seen that the values are close. As the model
 					is able to make the prediction as the curve is nearly similar to the first case.</p></div>
-					<img src="assets/img/portfolio/FbProphetForecasting/AIGProjectPredictionWithUserInputIncreaseInUsers.JPG" alt="Prediction with user provided data but with increase in number of users" width=100% height="500"/>
-					<div class="portfolio-info"><p>In this case the second data entry method is used, i.e. data being provided by the user using the user interface. The number of users and the bandwidth usage is 
-					kept nearly constant but the network capacity has been increased from 50000000 to 60000000 and so as the networ capacity is increased
-					and so the network percentage usage will be impacted as the network capaicty is more compared to the number of users and the bandwidth requirement. As the model
-					is able to make the prediction as there is a down curve in the percentage usage and so the prediction made by the model is close to as expected.</p></div>
+					<img src="assets/img/portfolio/FbProphetForecasting/AIGProjectPredictionWithUserInputIncreaseInUsers.JPG" alt="Prediction with user provided data but with increase in number of users" width=100% height="500"/>-->
+					<div class="portfolio-info"><p>The number of users and the bandwidth usage is 
+					kept nearly constant but increasing the network capacity from 50000000 to 60000000. The model predicts a down curve in the percentage usage.</p></div>
 					<img src="assets/img/portfolio/FbProphetForecasting/AIGProjectWithSameUsersButIncreaseInCapacity.JPG" alt="Prediction with user provided data but with increase in network capacity" width=100% height="500"/>
-					<div class="portfolio-info"><p>Therefore, from the various cases it can be analyzed that the model is able to make prediction based on current values of certain regressors and so this
-					model is applicable in various scenarios where the forecasted model just doesn't depend on the previous data.</p></div>
+					<!--<div class="portfolio-info"><p>Therefore, from the various cases it can be analyzed that the model is able to make prediction based on current values of certain regressors and so this
+					model is applicable in various scenarios where the forecasted model just doesn't depend on the previous data.</p></div>-->
             </div>
 		  </div>
 		</div>
