--- a/Human_detection_recognition_tracking_system.html
+++ b/Human_detection_recognition_tracking_system.html
@@ -60,13 +60,13 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <!--<li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>-->
           <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-		  <li><a href="index.html#facts" class="nav-link scrollto"><i class="bx bx-line-chart"></i> <span>Facts</span></a></li>
+		  <!--<li><a href="index.html#facts" class="nav-link scrollto"><i class="bx bx-line-chart"></i> <span>Facts</span></a></li>-->
 		  <li><a href="index.html#skills" class="nav-link scrollto"><i class="bi bi-boxes"></i> <span>Skills</span></a></li>
           <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-		  <li><a href="index.html#awards" class="nav-link scrollto"><i class="bi bi-award"></i> <span>Awards</span></a></li>
-          <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+		  <!--<li><a href="index.html#awards" class="nav-link scrollto"><i class="bi bi-award"></i> <span>Awards</span></a></li>-->
+          <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
           <li><a href="index.html#testimonials" class="nav-link scrollto"><i class="bi bi-chat-quote-fill"></i> <span>Testimonials</span></a></li>
           <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
 		  <li><a></a></li>
@@ -124,7 +124,7 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Machine/Deep Learning project</li>
-                <li><strong>Client</strong>: Bachelor degree group project</li>
+                <!--<li><strong>Client</strong>: Bachelor degree group project</li>-->
 				<li><strong>Frameworks/Programming Languages/Concepts</strong>: Computer Vision, Python, OpenCV, LBPH, HogDescriptor, SQL, Cascades</li>
                 <!--<li><strong>Project date</strong>: 01 March, 2020</li>-->
                 <!--<li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>-->
@@ -139,15 +139,7 @@
               <h2>Project Description</h2>
 			  <div class="portfolio-info" style="text-align: justify;
   text-justify: inter-word;">
-              <p>In modern generation there are various AI based security systems which provides various methods of human tracking, recognition, 
-					capturing various aspects of a human such as gait, emotion, physical attributes, objects, etc. This project has been developed as 
-					a team of 4 members and has been developed in python with using openCV for computer vision. This project is implemented 
-					with the aspect to be used to office or work places to determine the work efficiency of an employee, where the employee would be 
-					detected, recognized and tracked over various camera feeds and their work data would be registered, with the help of this system 
-					the work done by employees or time being wasted could be determined. <br/>
-					The concept of Computer Vision has been used and the code has been developed in python using openCV, and sql has been used to store the 
-					data of the person being tracked such as the location of the person and the time for which the person was in that camera frame. For this project
-					a single camera frame was used but when used in office multiple camera feeds would be required.</p>
+              <p>This project is an AI based security system for human detection, recognition and tracking purpose. It was developed in python using openCV for computer vision. SQL has been used to store the data of the person being tracked such as the location of the person and the time for which the person was in that camera frame.</p>
             </div>
 			</div>
 		  </div>
@@ -160,12 +152,8 @@
 			<div class="portfolio-description">
 				<div class="portfolio-info" style="text-align: justify;
   text-justify: inter-word;">
-				<p>The youtube video depicts the working of the system. The system also consist of user interface for the boss/admin to login
-					and view the data stored in the database regarding the employees and the employee could also login and view their own data, i.e. 
-					the working presence of the employee in different sections of the office and the duration.<br/>
-					The model has been trained with a dataset of 3 people and various profile pictures has been used to train the model. The frontalface 
-					and the upper body cascades has been used to detect a human. The HogDescriptor is also used to detect a person in the frame. The LBPH Face Recognizer model has been used to recognize the person in the frame. The model has been trained with the data, where each image is 
-					labeled with the id of the user and based on the id the name of the person is determined.</p>
+				<p>The system also consist of user interface for the boss/admin to login and view the data stored in the database regarding the employees and the employee could also login and view their own data.<br/>
+					The frontalface and the upper body cascades has been used to detect a human. The HogDescriptor is also used to detect a person in the frame. The LBPH Face Recognizer model has been used to recognize the person in the frame. </p>
 				</div>
 			</div>
 		  </div>
