--- a/SmartAquaponicsSystem.html
+++ b/SmartAquaponicsSystem.html
@@ -60,13 +60,13 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <!--<li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>-->
           <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-		  <li><a href="index.html#facts" class="nav-link scrollto"><i class="bx bx-line-chart"></i> <span>Facts</span></a></li>
+		  <!--<li><a href="index.html#facts" class="nav-link scrollto"><i class="bx bx-line-chart"></i> <span>Facts</span></a></li>-->
 		  <li><a href="index.html#skills" class="nav-link scrollto"><i class="bi bi-boxes"></i> <span>Skills</span></a></li>
           <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-		  <li><a href="index.html#awards" class="nav-link scrollto"><i class="bi bi-award"></i> <span>Awards</span></a></li>
-          <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+		  <!--<li><a href="index.html#awards" class="nav-link scrollto"><i class="bi bi-award"></i> <span>Awards</span></a></li>-->
+          <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
           <li><a href="index.html#testimonials" class="nav-link scrollto"><i class="bi bi-chat-quote-fill"></i> <span>Testimonials</span></a></li>
           <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
 		  <li><a></a></li>
@@ -132,11 +132,11 @@
               <h2>Project information</h2>
               <ul>
                 <li><strong>Category</strong>: Machine Learning project/Data Analytics/ IOT</li>
-                <li><strong>Client</strong>: Bachelor degree group project</li>
-				<li><strong>Frameworks/Programming Languages/Concepts</strong>: Python, Data Analytics, RNN, IOT, Arduino, Raspberry, Channel, Sensors, Cloud computing</li>
+                <!--<li><strong>Client</strong>: Bachelor degree group project</li>-->
+				<li><strong>Frameworks/Programming Languages/Concepts</strong>: Python, Data Analytics, RNN, IOT, Arduino, Raspberry Pi, Channel, Sensors, Cloud computing</li>
               </ul>
 			  <h2>Project Description</h2>
-			  <p>In the global hunger index India and various other countries fall in severe or worst category. There is limited productivity using conventional farming due to water scarcity, high labor costs and maintenance. Aquaponics farming is a smart solution as it is monsoon independent, affordable and organic farming. Using sustainable IoT and data analytics, farming maintenance becomes easier suiting both urban and rural areas. Automating the whole process reduces the maintenance load and complexity of the system and maximizes the efficiency.</p>
+			  <p><!--In the global hunger index India and various other countries fall in severe or worst category.--> Due to limited productivity using conventional farming due to water scarcity, high labor costs and maintenance. Aquaponics farming is a smart solution as it is monsoon independent, affordable and organic farming. Using sustainable and automated system maintenance becomes easier <!--suiting both urban and rural areas. Automating the whole process reduces the maintenance load and complexity of the system--> and maximizes the efficiency.</p>
             </div>
           </div>
 		  
@@ -150,16 +150,16 @@
 		  <div class="col-lg-6">
 				<div class="portfolio-info" style="text-align: justify;
   text-justify: inter-word;">
-				<p>The picture on the left represents the block diagram for the aquaponics system. The system consists of electrical, mechanical and IOT components for the system to function, data collection and system maintenance. The major components for the aquaponics are the fish tank, grow bed and water pump. The ph sensor, temperature sensor and ammonia alert system is for data collection about the status of the system. With the help of arduino uno, i.e. microcontroller and a wifi-module the data is stored in cloud. The stored data is then analysed to determine the current status of ph, ammonia concentration and temperature of the system. After analysing the data the automated system makes the decision about how much to feed the fish to balance the ammonia concentration. </p>
+				<p>The system consists of electrical, mechanical and IOT components for the system to function, data collection and system maintenance. The major components are the fish tank, grow bed and water pump. The ph sensor, temperature sensor and ammonia alert system is for data collection about the status of the system which are stored in cloud. The stored data is then analysed to determine the current status of ph, ammonia concentration and temperature of the system which assists on decision making of how much to feed the fish to balance the ammonia concentration. </p>
 				</div>
 			</div>
-		<div class="col-lg-12">
+		<!--<div class="col-lg-12">
 				<div class="portfolio-info" style="text-align: justify;
   text-justify: inter-word;">
 			<p>The data analysis updates the owner via a mobile application about the possible actions that must be taken to maintain the health of the plants and fishes.<br>
 				The electrical components such as solar panel, battery, charge controller are initialized to make the system sustainable to generate its own electricity to run the complete system.</p>
 			</div>
-		</div>
+		</div>-->
 		
 		<div class="col-lg-7">
             <div class="portfolio-details-slider swiper">
@@ -181,7 +181,7 @@
         </div>
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <p>The sensor collects data every certain duration and is stored in the cloud. The pH and the temperature were maintained using the data analytics and smart decision making. The ammonia excreated by the fishes gets converted into nitrite and then nitrate which acts as a fertilizer for the plants.</p>
+              <p><!--The sensor collects data every certain duration and is stored in the cloud. -->The pH and the temperature were maintained using the data analytics and smart decision making. The ammonia excreated by the fishes gets converted into nitrite and then nitrate which acts as a fertilizer for the plants.</p>
             </div>
           </div>
 
