--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
+  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+    <div class="hero-container" data-aos="fade-in">
+      <h1>Bikram Paul</h1>
+      <p>Aspiring <span class="typed" data-typed-items="Software Developer, Data Analyst"></span></p>
+    </div>
+  </section><!-- End Hero -->
   
 
   <main id="main">
@@ -79,11 +85,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-		  <p class="paras">I am a Master's graduate from University of Wollongong in Computer Science and Engineering with specialization in Machine Learning, Big Data and Intelligent Systems. Upon completion of my bachelor's degree, I received a <strong>gold medal</strong>. I am a hard-working person who is motivated and dedicated, with good time management and problem-solving skills.</p>
-		  <div id="hero">
-			  <p>Aspiring <span class="typed" data-typed-items="Software Developer, Data Analyst"></span></p>
-		  </div><!-- End Hero -->
-		  I have been actively looking for an entry/graduate level position to help launch my career. 
+		  <p class="paras">I am a Master's graduate from University of Wollongong in Computer Science and Engineering with specialization in Machine Learning, Big Data and Intelligent Systems. Upon completion of my bachelor's degree, I received a <strong>gold medal</strong>. I am a hard-working person who is motivated and dedicated, with good time management and problem-solving skills. <!--I have been actively looking for an entry/graduate level position to help launch my career.--></p>
         </div>
 
         <!--<div class="row">
@@ -206,9 +208,9 @@
             </div>
 			
 			<div class="progress">
-              <span class="skill">SQL and NoSQL<i class="val">90%</i></span>
+              <span class="skill">SQL and NoSQL<i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 			
@@ -351,27 +353,11 @@
               <p><em>Internship at Aubot Engineering</em></p>
 			  <h6><em>Django, Python, HTML, CSS, AJAX, Javascript, SQL, Amazon (EC2, Elastic Beanstalk, RDS, Redis)</em></h6>
 			  <ul>
-                <li>Developed project and functional website on django framework</li>
+                <li>Developed and deployed functional website on django framework within specific timeframe</li>
                 <li>Database architect and database administrator</li>
-                <li>Delivered and deployed web application within specific timeframes</li>
               </ul>
             </div>
 			<div class="resume-item">
-              <h4>Web Developer (Backend Developer)</h4>
-              <h5>June 2018 - July 2018</h5>
-              <p><em>Internship at Fame Technologies, Bangalore, India</em></p>
-			  <h6><em>HTML, CSS, Javascript, AJAX, PHP, SQL, JSON</em></h6>
-              <ul>
-                <li>Developed website using HTML, JavaScript, AJAX, PHP, SQL and JSON coding</li>
-				<li>Organized events like meet-ups, hackathon and seminars</li>
-                <li>Maintained website integrity, security and efficiency</li>
-				<li>Conducted testing and review of website design for responsiveness, clarity and effectiveness</li>
-              </ul>
-            </div>
-			
-			</div>
-			<div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-				<div class="resume-item">
               <h4>Data Scientist</h4>
               <h5>August 2020 - October 2020</h5>
               <p><em>Internship at AI Australia</em></p>
@@ -379,7 +365,21 @@
               <ul>
                 <li>Leader for a project 'Aerial Object Recognition', using machine learning methodologies, faster r-cnn and retina net</li>
 				<li>Dataset pre-processing, testing and model validation were performed</li>
-                <li>Applied statistics and algebraic techniques to interpret key points from gathered data</li>
+              </ul>
+            </div>
+			
+			
+			</div>
+			<div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+			<div class="resume-item">
+              <h4>Web Developer (Backend Developer)</h4>
+              <h5>June 2018 - July 2018</h5>
+              <p><em>Internship at Fame Technologies, Bangalore, India</em></p>
+			  <h6><em>HTML, CSS, Javascript, AJAX, PHP, SQL, JSON</em></h6>
+              <ul>
+                <li>Developed website and organized events</li>
+                <!--<li>Maintained website integrity, security and efficiency</li>-->
+				<li>Conducted testing and review of website design for responsiveness, clarity and effectiveness</li>
               </ul>
             </div>
 			<div class="resume-item">
@@ -387,8 +387,7 @@
               <h5>July 2018 - September 2018</h5>
               <p><em>Internship at BuziBrains, Bangalore, India</em></p>
               <ul>
-                <li>Worked with Micron Technologies Services to develop Business Process Management Applications, i.e. "Customized CRM Applications"</li>
-				<li>Coordinated with project management staff on database development timelines and project scope</li>
+                <li>Worked with Micron Technologies Services to develop Business Process Management Applications</li>
               </ul>
             </div>
 			</div>
@@ -422,7 +421,7 @@
 
         <div class="section-title">
           <h2>Projects</h2>
-          <p class="paras">This section showcases the major projects I  worked on while earning my bachelor's and master's degrees. These projects were finished in groups, and the goals of the projects were met. Please click on the <i class="bx bx-link"></i> icon to read more details about the projects.</p>
+          <p class="paras">This section showcases the major projects I  worked on while earning my bachelor's and master's degrees. Please click on the <i class="bx bx-link"></i> icon to read more details about the projects.</p>
         </div>
 
         <!-- This below commented section is a filtering mechanism might be required later -->
@@ -444,7 +443,7 @@
               <img src="assets/img/portfolio/Project1logo1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <!--<a href="assets/img/portfolio/Project1logo.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Human Detection, Recognition and Tracking system"><i class="bx bx-plus"></i></a>-->
-                <a href="Human_detection_recognition_tracking_system.html" title="Human Detection, Recognition and Tracking system"><i class="bx bx-link"></i></a>
+                <a href="Human_detection_recognition_tracking_system.html" title="Computer Vision, Detection, Recognition"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -454,7 +453,7 @@
               <img src="assets/img/portfolio/Project2logo.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <!--<a href="assets/img/portfolio/Project2logo.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="FbProphet Forecasting with regressors"><i class="bx bx-plus"></i></a>-->
-                <a href="FBprophet_forecasting.html" title="FbProphet Forecasting with regressors"><i class="bx bx-link"></i></a>
+                <a href="FBprophet_forecasting.html" title="Forecasting, FbProphet"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -464,7 +463,7 @@
               <img src="assets/img/portfolio/Project3logo.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <!--<a href="assets/img/portfolio/Project3logo.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Sustainable smart aquaponics farming using IOT and Data Analytics"><i class="bx bx-plus"></i></a>-->
-                <a href="SmartAquaponicsSystem.html" title="Sustainable smart aquaponics farming using IOT and Data Analytics"><i class="bx bx-link"></i></a>
+                <a href="SmartAquaponicsSystem.html" title="Aquaponics, IOT, Data Analytics"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -475,7 +474,7 @@
               <img src="assets/img/portfolio/Project4logo.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <!--<a href="assets/img/portfolio/Project4logo.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Stock Market Prediction and Recommendation System"><i class="bx bx-plus"></i></a>-->
-                <a href="StockPrediction.html" title="Stock Market Prediction and Recommendation System"><i class="bx bx-link"></i></a>
+                <a href="StockPrediction.html" title="Stock Market, prediction, recommendation"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
