changed the role

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Bikram Paul</h1>
-      <p>Aspiring <span class="typed" data-typed-items="Software Developer, Data Analyst"></span></p>
+      <p>Aspiring <span class="typed" data-typed-items="ML Engineer, Data Analyst, Software Developer"></span></p>
     </div>
   </section><!-- End Hero -->
   
