--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
               <h4>Master of Computer Science</h4>
               <h5>Mar 2020 - Dec 2021</h5>
               <p><em>University of Wollongong, Wollongong, Australia</em></p>
-              <p>Major in 'Intelligent Systems' and 'Machine Learning and Big Data'. Average cgpa of 8.63 based on 3 semester scores. </p>
+              <p>Major in 'Intelligent Systems' and 'Machine Learning and Big Data'. Weighted Average Marks:86.8 </p>
             </div>
 			<!--<div class="resume-item">
               <h4>Bachelor of Computer Science &amp; Engineering</h4>
